--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -6,8 +6,6 @@
   text-align: center; }
 
 .icon {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
   border-radius: 50%;
   border: 3px solid #fff;
   display: inline-block;
@@ -58,8 +56,6 @@
 
 .btn,
 .fm-button {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
   border-radius: 5px;
   border: 1px solid transparent;
   cursor: pointer;
@@ -69,21 +65,25 @@
   padding: 6px 12px;
   text-decoration: none; }
 
+a.btn:hover,
+a.fm-button:hover {
+  text-decoration: none; }
+
 .fm-button.green,
 .btn-green,
 .btn-green:visited {
-  background-color: #83c070;
+  background: #83c070;
   color: #fff; }
 
 .fm-button.red,
 .btn-red,
 .btn-red:visited {
-  background-color: #e85353;
+  background: #e85353;
   color: #fff; }
 
 .btn-nav,
 .btn-nav:visited {
-  background-color: #fff;
+  background: #fff;
   border: 1px solid #e3e8ec;
   color: #333;
   font-size: 13pt; }
@@ -91,18 +91,16 @@
 .btn-nav.active,
 .btn-nav.active:visited,
 .btn-nav:hover {
-  background-color: #ea524f;
+  background: #ea524f;
   border: 1px solid #ea524f;
   color: #fff; }
 
 .fm-button.disabled {
-  background-color: #e3e3e3;
+  background: #e3e3e3;
   border: 1px solid #e3e3e3;
   color: #b3b3b3; }
 
 .fm-panel {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
   background-color: #fff;
   margin-top: 30px;
@@ -120,6 +118,8 @@
     padding: 1em; }
     .fm-panel .fm-panel-body.no-padding {
       padding: 0; }
+  .fm-panel .no-padding p {
+    padding: 1em; }
 
 .form-horizontal fieldset {
   background-color: transparent;
@@ -139,7 +139,8 @@
 
 .fm-panel table {
   font-size: 11pt;
-  width: 100%; }
+  width: 100%;
+  border-collapse: collapse; }
   .fm-panel table th {
     background-color: #f5f8fb;
     font-size: 9pt; }
@@ -149,15 +150,14 @@
     border-collapse: collapse;
     border-spacing: 0;
     border-top: 1px solid #e3e8ec;
-    padding: .4em;
-    font-size: 9pt; }
-  .fm-panel table tbody tr:nth-child(even) {
+    font-size: 9pt;
+    padding: .4em; }
+  .fm-panel table tr:nth-child(even) {
     background-color: #f5f8fb; }
 
 .fm-loading-overlay {
   background: black;
   background: rgba(0, 0, 0, 0.4);
-  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
   position: fixed;
   width: 100%;
@@ -177,7 +177,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9999 !important; }
+  z-index: 9999; }
   .fm-message-overlay.fm-info {
     background-color: #799ec4;
     border-color: #87acd3; }
@@ -211,39 +211,35 @@
     margin: 0;
     margin-left: 15px;
     padding: 0; }
-    .pages ol li {
-      float: left;
-      list-style: none;
-      margin-right: 5px; }
-      .pages ol li.current {
-        background-color: #f08c48;
-        color: #fff;
-        display: inline-block;
-        font-size: 9pt;
-        line-height: 16px;
-        outline: none;
-        padding: 8px 12px;
-        text-decoration: none;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px; }
-      .pages ol li a {
-        background-color: #e3e3e3;
-        color: #000;
-        cursor: pointer;
-        display: inline-block;
-        font-size: 9pt;
-        line-height: 16px;
-        outline: none;
-        padding: 8px 12px;
-        text-decoration: none;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px; }
-        .pages ol li a:hover {
-          background-color: #f08c48;
-          color: #fff;
-          text-decoration: none; }
+  .pages li {
+    float: left;
+    list-style: none;
+    margin-right: 5px; }
+    .pages li.current {
+      border-radius: 3px;
+      background-color: #f08c48;
+      color: #fff;
+      display: inline-block;
+      font-size: 9pt;
+      line-height: 16px;
+      outline: none;
+      padding: 8px 12px;
+      text-decoration: none; }
+  .pages a {
+    border-radius: 3px;
+    background-color: #e3e3e3;
+    color: #000;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 9pt;
+    line-height: 16px;
+    outline: none;
+    padding: 8px 12px;
+    text-decoration: none; }
+    .pages a:hover {
+      background-color: #f08c48;
+      color: #fff;
+      text-decoration: none; }
 
 .fm-category-tree {
   font-size: 12pt;
@@ -283,7 +279,7 @@
   line-height: 15px;
   margin: 0;
   padding: 0 3px 0 0; }
-.fm-products-list-container .prices tbody tr:nth-child(even) {
+.fm-products-list-container .prices tr:nth-child(even) {
   background-color: transparent; }
 .fm-products-list-container .prices input {
   border: 0;
@@ -295,11 +291,13 @@
   width: 20px; }
 
 .info {
-  margin: 1em !important; }
+  margin: 1em; }
 
 .export {
+  float: right;
   margin: 1em;
-  text-align: right; }
+  text-align: right;
+  width: 350px; }
 
 .fm-orderlist-panel {
   float: left;
@@ -327,12 +325,6 @@
     display: block;
     margin: 3px 0 -5px; }
 
-#main {
-  background-color: #e7eef4 !important; }
-
-#content.nobootstrap {
-  padding: 62px 0 0; }
-
 .fm-container {
   background-color: #e7eef4;
   font-family: "Montserrat", sans-serif;
@@ -356,5 +348,11 @@
 
 .clear {
   clear: both; }
+
+#main {
+  background-color: #e7eef4 !important; }
+
+#content.nobootstrap {
+  padding: 62px 0 0; }
 
 /*# sourceMappingURL=main.css.map */
