--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -33,6 +33,13 @@
 .fm-header {
   background-color: #fff; }
 
+.fm-switcher {
+  background-color: #fff;
+  border: 0;
+  margin-bottom: 0;
+  padding-left: 5px;
+  padding-top: 10px; }
+
 .fm-header-wrapper {
   height: 90px;
   margin: 0 auto;
@@ -112,10 +119,13 @@
     background-color: #799ec4;
     color: #fff;
     font-size: 15pt;
+    line-height: 28px;
     padding: .4em; }
     .fm-panel .fm-panel-header .legend {
       float: right;
       font-size: 10pt;
+      height: 20px;
+      line-height: 19px;
       margin-top: 4px; }
   .fm-panel .fm-panel-body {
     padding: 1em; }
@@ -292,9 +302,14 @@
   margin: -2px 3px 0 0;
   padding: 2px;
   width: 20px; }
+.fm-products-list-container .prices input:disabled {
+  background-color: #e3e3e3; }
 
 .info {
   margin: 1em; }
+
+.fm-product-list-controls, .fm-order-list-controls {
+  overflow: auto; }
 
 .export {
   float: right;
