--- a/src/backoffice/frontend/css/prestashop.scss
+++ b/src/backoffice/frontend/css/prestashop.scss
@@ -3,6 +3,11 @@
 }
 
 #content.nobootstrap {
+  margin-left: 0;
   padding: 62px 0 0;
+}
 
+.fm-container {
+  padding-left: 210px;
+  width: auto;
 }
