--- a/src/backoffice/frontend/css/main.css
+++ b/src/backoffice/frontend/css/main.css
@@ -381,6 +381,13 @@
   margin-left: 0;
   padding: 62px 0 0; }
 
-.fm-container {
+#content.nobootstrap .fm-container {
   padding-left: 210px;
   width: auto; }
+
+.fmpsv14 .fm-content-wrapper,
+.fmpsv14 .fm-header-wrapper {
+  width: 920px; }
+.fmpsv14 .fm-product-panel,
+.fmpsv14 .fm-orderlist-panel {
+  width: 670px; }
