--- a/src/backoffice/frontend/css/main.scss
+++ b/src/backoffice/frontend/css/main.scss
@@ -17,7 +17,7 @@
 @import '../../includes/shared/frontend/css/form';
 @import '../../includes/shared/frontend/css/table';
 @import '../../includes/shared/frontend/css/overlay';
-@import "../../includes/shared/frontend/css/pagination";
+@import '../../includes/shared/frontend/css/pagination';
 
 // Pages
 @import '../../includes/shared/frontend/css/products';
