--- a/src/backoffice/frontend/css/main.css
+++ b/src/backoffice/frontend/css/main.css
@@ -8,20 +8,20 @@
 .center {
   text-align: center; }
 
-.icon {
+.fm-product-panel .icon {
   border-radius: 50%;
   border: 3px solid #fff;
   display: inline-block;
   height: 13px;
   vertical-align: middle;
   width: 13px; }
-  .icon.pending {
+  .fm-product-panel .icon.pending {
     background-color: #f08c48; }
-  .icon.on {
+  .fm-product-panel .icon.on {
     background-color: #83c070; }
-  .icon.noton {
+  .fm-product-panel .icon.noton {
     background-color: #e85353; }
-  .icon.big {
+  .fm-product-panel .icon.big {
     border: 0;
     height: 20px;
     width: 20px; }
@@ -320,7 +320,7 @@
 .fm-products-list-container .prices input:disabled {
   background-color: #e3e3e3; }
 
-.info {
+p.info {
   margin: 1em; }
 
 .fm-product-list-controls,
